--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts"
   },
+  "prisma": {
+    "seed": "node scripts/seed.js"
+  },
   "dependencies": {
+    "@prisma/client": "5.15.0",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prisma": "^5.15.0"
   },
   "module": "src/index.js"
 }
