fix: changed data model
changed the database schema to have Int as id instead of uuids. also
updated packages.

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "seed": "node scripts/seed.js"
   },
   "dependencies": {
-    "@prisma/client": "5.15.0",
+    "@prisma/client": "^5.17.0",
     "elysia": "latest"
   },
   "devDependencies": {
     "bun-types": "latest",
-    "prisma": "^5.15.0"
+    "prisma": "^5.17.0"
   },
   "module": "src/index.js"
 }
